plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.144'
    id 'checkstyle'
    id 'jacoco'
    id 'net.ltgt.errorprone' version '5.1.0'
    id 'com.github.spotbugs' version '6.5.11'
    id 'org.owasp.dependencycheck' version '13.0.0'
}

group = mod_group_id
version = mod_version

base {
    archivesName = mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
    withSourcesJar()
}

sourceSets {
    schematicaApi {
        java.srcDirs = ['src/schematica_api/java']
    }
    main {
        java.srcDirs = ['src/api/java', 'src/main/java']
        resources.srcDir 'src/launch/resources'
        resources.exclude 'quilt.mod.json'
    }
    gameTest {
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
}

def stageGameTestStructures = tasks.register('stageGameTestStructures', Copy) {
    from 'src/gameTest/structures'
    into layout.buildDirectory.dir('gametest-server/gameteststructures')
}

neoForge {
    version = neo_version
    addModdingDependenciesTo sourceSets.schematicaApi
    addModdingDependenciesTo sourceSets.gameTest

    parchment {
        minecraftVersion = parchment_minecraft_version
        mappingsVersion = parchment_mappings_version
    }

    runs {
        server {
            server()
            programArgument '--nogui'
        }

        gameTestServer {
            type = 'gameTestServer'
            sourceSet = sourceSets.gameTest
            gameDirectory = layout.buildDirectory.dir('gametest-server')
            systemProperty 'neoforge.enabledGameTestNamespaces', 'automatone_gametest'
            taskBefore stageGameTestStructures
        }

        configureEach {
            logLevel = org.slf4j.event.Level.INFO
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
        automatone_gametest {
            sourceSet sourceSets.gameTest
        }
    }

    runs.server.loadedMods = [mods."${mod_id}"]
    runs.gameTestServer.loadedMods = [mods."${mod_id}", mods.automatone_gametest]

    unitTest {
        enable()
        testedMod = mods."${mod_id}"
        loadedMods = [mods."${mod_id}"]
    }
}

dependencies {
    // Optional mod placeholders are compile-time contracts, not runtime mods.
    compileOnly sourceSets.schematicaApi.output
    compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
    testImplementation 'junit:junit:4.13.2'
}

def generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    def properties = [
            loader_version_range   : loader_version_range,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
    ]
    inputs.properties properties
    expand properties
    from 'src/main/templates'
    into layout.buildDirectory.dir('generated/sources/modMetadata')
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.named('runGameTestServer') {
    timeout.set(java.time.Duration.ofMinutes(5))
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

tasks.withType(AbstractArchiveTask).configureEach {
    preserveFileTimestamps = false
    reproducibleFileOrder = true
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
}

apply from: 'gradle/verification.gradle'
